Version: 999.999.999
Date: 9999-99-99
  Changes:
    - Bumped minimum base game version to 1.1.107.
    - Bumped Advanced Artillery Remotes Continued to latest version (verbose logging is now off by default).
    - Bumped Automatic Train Painter to latest version.
    - Bumped Big Light to latest version.
    - Bumped Blueprint Signals (continued) to latest version.
    - Bumped Factory Planner to latest version. Mod settings can no longer be set via modpack (default timescale).
    - Bumped Ghost Counter to latest version.
    - Enable use of artillery cluster remote for singular shots.
  Features:
  Bugfixes:
---------------------------------------------------------------------------------------------------
Version: 1.3.0
Date: 2022-07-26
  Features:
    - Improved visibility for power switch and train stop status light indicators (via "Big Light")
    - Quicker map tagging using right-click (via "Quick Map Tag")
    - Thicker power cables and logic wires(via "Thicker Power Wires")
    - Show unfulfilled requests in the current logistic network (via "What's Missing?")
    - Rename locomotives, labs, roboports, and radars (via "Renamer")
    - Pick-up leftover items alongside inserters (via "Pick It Up")
    - Automatically fill buildings and vehicles with fuel when placing them down (via "Fill4Me")
---------------------------------------------------------------------------------------------------
Version: 1.2.0
Date: 2022-07-20
  Changes:
    - Replaced "Construction Planner" with "Construction Planner Continued" mod. Although it should be a drop-in replacement, make sure to backup the savegame before updating the modpack.
    - Replaced "Quick Swap" with "Quickbar Vertical Swap" mod. Provides more features, and preserves blueprints on the quickbar (by default).
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 2022-07-15
  Changes: