@@ -16,7 +16,7 @@
         "BigLight >= 0.2.0",
         "Blueprint-Editor >= 3.1.0",
         "BlueprintSignals_continued >= 0.4.3",
-        "BlueprintTools >= 1.2.2",
+        "BlueprintTools >= 1.3.1",
         "BotPrioritizer >= 0.2.3",
         "BottleneckLite >= 1.2.3",
         "car-finder >= 1.5.2",
